# test_project

./: README.md
frontend/: README.md  package.json
frontend/src/: App.js  People.js  Person.js  PersonEdit.js
go/: README.md
python/: .env  README.md  app.py  db.sqlite  endpoints.py  models.py  pyproject.toml  settings.py  urls.py
